added a link so user can navigate to join page

--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -3,3 +3,5 @@
 <form action="/logout?_method=DELETE" method="POST">
   <button>Logout</button>
 </form>
+
+<a href="/join/<%= id %>">Become a member here</a>
