--- a/src/views/join.ejs
+++ b/src/views/join.ejs
@@ -1,4 +1,4 @@
-<form action="/join/<%=user.id%>/?_method=PATCH" method="POST">
+<form action="/join/submit?_method=PATCH" method="POST">
   <h1>Join the Club</h1>
   <p>Enter the secret password to become a member</p>
   <span><%= message %></span>
