--- a/src/views/createMessage.ejs
+++ b/src/views/createMessage.ejs
@@ -1,13 +1,23 @@
-<h1>Create a message</h1>
-<form action="/create-message" method="POST">
-  <div>
-    <label for="title">Title</label>
-    <input type="text" name="title" id="title" />
-  </div>
-  <div>
-    <label for="text">Message</label>
-    <textarea name="text" id="text"></textarea>
-  </div>
-  <div><button>Submit</button></div>
-</form>
-<a href="/">Home</a>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Members Only</title>
+  </head>
+  <body>
+    <%- include('navbar') %>
+    <h1 class="text-center">Create a message</h1>
+    <form class="col-6 mx-auto" action="/create-message" method="POST">
+      <div class="mb-3">
+        <label class="form-text" for="title">Title</label>
+        <input class="form-control" type="text" name="title" id="title" />
+      </div>
+      <div class="mb-3">
+        <label for="text">Message</label>
+        <textarea class="form-control" name="text" id="text"></textarea>
+      </div>
+      <div><button class="btn btn-primary">Submit</button></div>
+    </form>
+  </body>
+</html>
