--- a/src/views/join.ejs
+++ b/src/views/join.ejs
@@ -1,10 +1,40 @@
-<form action="/join/submit?_method=PATCH" method="POST">
-  <h1>Join the Club</h1>
-  <p>Enter the secret password to become a member</p>
-  <span><%= message %></span>
-  <div>
-    <label for="passcode">Passcode</label>
-    <input type="text" name="passcode" />
-  </div>
-  <button type="submit">Submit</button>
-</form>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Members Only</title>
+    <link
+      href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
+      rel="stylesheet"
+    />
+  </head>
+  <body>
+    <%- include('navbar') %>
+    <div class="container">
+      <div class="text-center">
+        <h1>Join the Club</h1>
+        <p>Enter the secret password to become a member</p>
+      </div>
+
+      <form
+        class="mx-auto col-6"
+        action="/join/submit?_method=PATCH"
+        method="POST"
+      >
+        <div class="">
+          <span><%= message %></span>
+          <div class="mb-3">
+            <label for="passcode">Passcode</label>
+            <input class="mr-1 form-control" type="text" name="passcode" />
+          </div>
+          <button class="btn btn-primary" type="submit">Submit</button>
+        </div>
+      </form>
+    </div>
+
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+  </body>
+</html>
