--- a/src/views/login.ejs
+++ b/src/views/login.ejs
@@ -1,16 +1,42 @@
-<h1>Login</h1>
-<% if (messages.error) { %> <%= messages.error %> <% } %>
-<form action="/login" method="POST">
-  <div>
-    <label for="email">Email</label>
-    <input type="email" name="email" />
-  </div>
-  <div>
-    <label for="password">Password</label>
-    <input type="text" name="password" />
-  </div>
-  <div>
-    <button type="submit">Login</button>
-  </div>
-  <p>Dont have an account? Sign up<a href="/sign-up"> here</a></p>
-</form>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Document</title>
+    <link
+      href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
+      rel="stylesheet"
+    />
+  </head>
+  <body>
+    <div class="container">
+      <div class="text-center">
+        <h1 class="my-5">Members Only 😎</h1>
+        <h2>Login</h2>
+      </div>
+
+      <% if (messages.error) { %> <%= messages.error %> <% } %>
+      <form class="col-6 mx-auto" action="/login" method="POST">
+        <div class="mb-3">
+          <label for="email">Email</label>
+          <input class="form-control" type="email" name="email" />
+        </div>
+        <div class="mb-3">
+          <label for="password">Password</label>
+          <input class="form-control" type="text" name="password" />
+        </div>
+        <div>
+          <button class="btn btn-primary" type="submit">Login</button>
+        </div>
+        <p class="text-center">
+          Dont have an account? Sign up<a href="/sign-up"> here</a>
+        </p>
+      </form>
+    </div>
+
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+  </body>
+</html>
