--- a/src/views/signUpForm.ejs
+++ b/src/views/signUpForm.ejs
@@ -1,28 +1,75 @@
-<form action="/sign-up" method="post">
-  <h2>Sign Up</h2>
-  <div>
-    <label for="first_name">First Name</label>
-    <input type="text" id="first_name" name="first_name" />
-  </div>
-  <div>
-    <label for="last_name">Last Name</label>
-    <input type="text" id="last_name" name="last_name" />
-  </div>
-  <div>
-    <label for="email">Email</label>
-    <input type="email" id="email" name="email" />
-  </div>
-  <div>
-    <label for="text">Password</label>
-    <input type="text" id="password" name="password" />
-  </div>
-  <div>
-    <label for="confirmPass">Confirm Password</label>
-    <input type="text" id="confirmPass" name="confirm_password" />
-  </div>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Document</title>
 
-  <div>
-    <button type="submit">Sign-up</button>
-  </div>
-  <p>Already have an account? Login<a href="/login"> here</a></p>
-</form>
+    <link
+      href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
+      rel="stylesheet"
+    />
+  </head>
+  <body>
+    <div class="container">
+      <div class="text-center">
+        <h1 class="my-5">Members Only 😎</h1>
+        <h2>Sign Up</h2>
+      </div>
+
+      <form class="col-6 mx-auto" action="/sign-up" method="post">
+        <div class="mb-3">
+          <label for="first_name">First Name</label>
+          <input
+            class="form-control"
+            type="text"
+            id="first_name"
+            name="first_name"
+          />
+        </div>
+        <div class="mb-3">
+          <label for="last_name">Last Name</label>
+          <input
+            class="form-control"
+            type="text"
+            id="last_name"
+            name="last_name"
+          />
+        </div>
+        <div class="mb-3">
+          <label for="email">Email</label>
+          <input class="form-control" type="email" id="email" name="email" />
+        </div>
+        <div class="mb-3">
+          <label for="text">Password</label>
+          <input
+            class="form-control"
+            type="text"
+            id="password"
+            name="password"
+          />
+        </div>
+        <div class="mb-3">
+          <label for="confirmPass">Confirm Password</label>
+          <input
+            class="form-control"
+            type="text"
+            id="confirmPass"
+            name="confirm_password"
+          />
+        </div>
+
+        <div class="mb-3">
+          <button class="btn btn-primary" type="submit">Sign-up</button>
+        </div>
+        <p class="text-center">
+          Already have an account? Login<a href="/login"> here</a>
+        </p>
+      </form>
+    </div>
+
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+  </body>
+</html>
